--- a/front-end/src/app/core/column-list/column-list.component.html
+++ b/front-end/src/app/core/column-list/column-list.component.html
@@ -13,7 +13,7 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
@@ -26,12 +26,7 @@
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li class="nav-item">
                     <a (click)="goHome()" class="nav-link">
-                        <svg xmlns="http://www.w3.org/2000/svg"
-                            width="25"
-                            height="25"
-                            fill="currentColor"
-                            class="bi bi-house"
-                            viewBox="0 0 16 16">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-house" viewBox="0 0 16 16">
                             <path
                             fill-rule="evenodd"
                             d="M2 13.5V7h1v6.5a.5.5 0 0 0 .5.5h9a.5.5 0 0 0 .5-.5V7h1v6.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5zm11-11V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z"/>
@@ -41,32 +36,33 @@
                         </svg>
                     </a>
                 </li>
-            <button mat-button [matMenuTriggerFor]="notifications"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-bell" viewBox="0 0 16 16">
+                <button mat-button [matMenuTriggerFor]="notifications"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-bell" viewBox="0 0 16 16">
             <path d="M8 16a2 2 0 0 0 2-2H6a2 2 0 0 0 2 2zM8 1.918l-.797.161A4.002 4.002 0 0 0 4 6c0 .628-.134 2.197-.459 3.742-.16.767-.376 1.566-.663 2.258h10.244c-.287-.692-.502-1.49-.663-2.258C12.134 8.197 12 6.628 12 6a4.002 4.002 0 0 0-3.203-3.92L8 1.917zM14.22 12c.223.447.481.801.78 1H1c.299-.199.557-.553.78-1C2.68 10.2 3 6.88 3 6c0-2.42 1.72-4.44 4.005-4.901a1 1 0 1 1 1.99 0A5.002 5.002 0 0 1 13 6c0 .88.32 4.2 1.22 6z"/>
           </svg>
             </button>
-          <mat-menu #notifications="matMenu">
-              <div class="noti-menu">
-                <div *ngFor="let noti of notis" class="noti-box">
-                  <div class="noti-group">
-                    <div class="noti-task">
-                      {{ noti.task }}
+                <mat-menu #notifications="matMenu">
+                    <div class="noti-menu">
+                        <div *ngFor="let noti of notis" class="noti-box">
+                            <div class="noti-group">
+                                <div class="noti-task">
+                                    {{ noti.task }}
+                                </div>
+                                <div>
+                                    <div style="float: left;" class="font-weight-bold">{{ noti.group }}:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </div>
+                                    <div style="float: left;"> {{ noti.board }}</div>
+                                </div>
+                            </div>
+                            <div class="noti-comment">
+                                <div class="small-image" style="background-image: url({{noti.image}});"></div>
+                                <div class="font-weight-bold">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{ noti.user_name }}</div>
+                                <div class="comment">
+                                    {{ noti.content }}
+                                </div>
+                            </div>
+                            <hr>
+                        </div>
                     </div>
-                    <div>
-                      <div style="float: left;" class="font-weight-bold">{{ noti.group }}:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </div><div style="float: left;"> {{ noti.board }}</div>
-                    </div>
-                  </div>
-                  <div class="noti-comment">
-                    <div class="small-image" style="background-image: url({{noti.image}});"></div>
-                    <div class="font-weight-bold">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{ noti.user_name }}</div>
-                    <div class="comment">
-                      {{ noti.content }}
-                    </div>
-                  </div>
-                  <hr>
-                </div>
-              </div>
-          </mat-menu>
+                </mat-menu>
             </ul>
         </div>
 
@@ -83,33 +79,29 @@
             </mat-menu>
         </div>
 
-          <a class="btn" mat-button [matMenuTriggerFor]="animals"><div
-          id="avatar"
-          style="background-image: url({{user.image}});"
-          title="{{ user.name }} ( {{ user.email }} )"
-        ></div></a>
-                    <!-- #docregion sub-menu -->
-                    <mat-menu #animals="matMenu">
-                        <a (click)="getInfo()" mat-menu-item>Hồ sơ cá nhân</a>
-                        <a (click)="logOut()" mat-menu-item>Đăng xuất </a>
-                    </mat-menu>
+        <a class="btn" mat-button [matMenuTriggerFor]="animals">
+            <div id="avatar" style="background-image: url({{user.image}});" title="{{ user.name }} ( {{ user.email }} )"></div>
+        </a>
+        <!-- #docregion sub-menu -->
+        <mat-menu #animals="matMenu">
+            <a (click)="getInfo()" mat-menu-item>Hồ sơ cá nhân</a>
+            <a (click)="logOut()" mat-menu-item>Đăng xuất </a>
+        </mat-menu>
     </nav>
     <div>
         <div style="background-color: #1273ac; border: 0px; margin-top: 100px;" cdkDropList cdkDropListGroup cdkDropListOrientation="horizontal" class="my-board" (cdkDropListDropped)="dropColumn($event)">
-            <div style="background-color: gainsboro; border-radius: 5px; max-height: 500px !important;
-            overflow: auto !important;" class="mt-3 ml-4 shadow p-2 mb-2 example-box" *ngFor="let column of columns" cdkDrag>
+            <div style="background-color: gainsboro; border-radius: 5px" class="mt-3 ml-4 shadow p-2 mb-2 example-box" *ngFor="let column of columns" cdkDrag>
                 <div class="title">
                     <button *ngIf="showInput !== column.column.id" class="btn form-control" style="border: 0px; text-align: left;" (click)="showEditNameInput(column.column.id)"> <b style="font-size: 20px;">{{ column.column.name }}</b> </button>
                     <form [hidden]="showInput !== column.column.id">
                         <input (keydown.enter)="changeNameList(column.column.id)" type="text" [(ngModel)]="myColumn.name" name="name" class="form-control">
                     </form>
                 </div>
-                
+
                 <div cdkDropList [cdkDropListData]="column.tasks" class="task-list" (cdkDropListDropped)="dropTask($event,column.column.id,column.column.name)">
                     <div (click)="openCommentDialog(task.id)" style="overflow: hidden;border-radius: 3px; height: 80px; border-left: 10px solid {{ task.label }};" class="my-task mt-2 shadow p-2 mb-2" *ngFor="let task of column.tasks" cdkDrag>
                         <div style="height: 40px;">{{ task.title }}</div>
-                        <div class="member" style="background-image: url({{user.image}});" *ngFor="let user of task.users"
-                        title="{{ user.name }} ( {{ user.email }} )"></div>
+                        <div class="member" style="background-image: url({{user.image}});" *ngFor="let user of task.users" title="{{ user.name }} ( {{ user.email }} )"></div>
                     </div>
                     <button id="addTask" style="background-color: gainsboro;" (click)="clickTaskButton(column.column.id)" *ngIf="showAddTask !== column.column.id" class="btn  form-control"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
                           <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
@@ -125,7 +117,7 @@
                         </form>
                     </div>
                 </div>
-                
+
             </div>
             <div style="min-width: 250px; " class="mt-2 ml-4 add-form ">
                 <div style="border: 0px;">
